[tool.poetry]
name = "lre-data-analysis"
version = "0.1.0"
description = ""
authors = ["Florian Paulweber <f.paulweber@aris-space.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
mysql-connector-python = "^8.4.0"
openpyxl = "^3.1.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
